add payment method

--- a/index.html
+++ b/index.html
@@ -58,28 +58,29 @@
 
     <img src="bedsheet cover.jpg" width="100%" height="100%">
     <h4> Cushion cover</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+    <P align="center">₹499</P>
+    <button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 <div class="sub-card">
 
     <img src="figurines.jpg" width="100%" height="100%" >
     <h4> Figurines vases & more</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+   <button onclick="location.href='payment.html'">Payment</button>
 
   </div>
   <div class="sub-card">
 
     <img src="home storage.jpg" width="100%" height="100%" >
     <h4> Home Storage</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+  <button onclick="location.href='payment.html'">Payment</button>
 
   </div>
   <div class="sub-card">
 
     <img src="lighting.jpg" width="100%" height="100%">
     <h4> Lighting Solutions</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+    <button onclick="location.href='payment.html'">Payment</button>
 </div>
 
 
@@ -87,21 +88,21 @@
 
     <img src="home.jpeg" width="100%" height="100px" >
     <h4>Home Decoar</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+   <button onclick="location.href='payment.html'">Payment</button>
 
   </div>
   <div class="sub-card">
 
     <img src="asian.png" width="100%" height="100%" >
     <h4>Asian paint</h4> 
-    <button><a href="Server Not fond">Buy Now</a></button>
+   <button onclick="location.href='payment.html'">Payment</button>
 
   </div>
   <div class="sub-card">
 
     <img src="bajaj.png" width="100%" height="70px" >
     <h4> Bajaj Product</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+    <button onclick="location.href='payment.html'">Payment</button>
 
   </div>
         </div>
@@ -115,28 +116,28 @@
 
     <img src="boat.jpg" width="100%" height="100%">
     <h4> Starting 249 | boAt</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+<button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 <div class="sub-card">
 
     <img src="boult.jpg" width="100%" height="100%">
     <h4> Staring 349 |boult</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+    <button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 <div class="sub-card">
 
     <img src="noise.jpg" width="100%" height="100%">
     <h4>Starting 649 |649 Noise </h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+<button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 <div class="sub-card">
  
     <img src="zebronics.jpg" width="100%" height="100%" >
     <h4> Starting 149 | Zebronics</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+<button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 
@@ -144,21 +145,21 @@
 
     <img src="apple.jpeg" width="100%" height="70px">
     <h4>Apple Product </h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+<button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 <div class="sub-card">
 
     <img src="sam.png" width="100%" height="50px">
     <h4> Samsung Product</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+<button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 <div class="sub-card">
 
     <img src="realme.png" width="100%" height="80px">
     <h4> Phone hear</h4>
-    <button><a href="Server Not fond">Buy Now</a></button>
+    <button onclick="location.href='payment.html'">Payment</button>
 
 </div>
 
@@ -167,7 +168,7 @@
 
    <div class="container-1">
    
-   </div>
+   
         <div class="card-1">
             <div class="card-image">
                 <img src="sidhidata.jpg">
@@ -175,7 +176,7 @@
             <div class="content">
               <h4> Women's Banarasi sari</h4>
               <h3><i class="fa-solid fa-indian-rupee-sign"></i>1500</h3>
-              <button><a href="Server Not fond">Buy Now</a></button>
+        <button onclick="location.href='payment.html'">Payment</button>
                
             </div>
         </div>
@@ -187,7 +188,7 @@
             <div class="content">
               <h4>Pure Cotton Floral Printed Kurta with Palazzo & Dupatta</h4>
               <h3><i class="fa-solid fa-indian-rupee-sign"></i>1200</h3>
-                  <button><a href="Server Not fond">Buy Now</a></button>
+                  <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
         
@@ -199,7 +200,7 @@
             <div class="content">
               <h4>  Pure Cotton Printed Straight Kurta Set with Palazzo Pants & Dupatta</h4>
               <h3> <i class="fa-solid fa-indian-rupee-sign"></i>1100</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+            <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -210,7 +211,7 @@
             <div class="content">
               <h4>Kurta Pant Set with Organza Dupatta | Viscose,Rayon | A-line fit</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>1400</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+          <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -221,7 +222,7 @@
             <div class="content">
               <h4>Women Faux Silk Semi-Stitched Lehenga Choli Set</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>7000</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+        <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -232,7 +233,7 @@
             <div class="content">
               <h4> Women Faux Silk Semi-Stitched Lehenga Choli Set</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>5000</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+          <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -247,7 +248,7 @@
             <div class="content">
               <h4> Women Faux Silk Semi-Stitched Lehenga Choli Set</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>600</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+        <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
          <div class="card-1">
@@ -257,7 +258,7 @@
             <div class="content">
               <h4> Women Faux Silk Semi-Stitched Lehenga Choli Set</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>300</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -268,7 +269,7 @@
             <div class="content">
               <h4> Women Faux Silk Semi-Stitched Lehenga Choli Set</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>400</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -279,7 +280,7 @@
             <div class="content">
               <h4> Mens Regular Fit|Classic Design with Stylish  Jeans</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>500</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -290,7 +291,7 @@
             <div class="content">
               <h4> Men Cargo Pants (Cargo-46-49)</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>700</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -301,7 +302,7 @@
             <div class="content">
               <h4>  Men's Regular Fit Solid Pattern formal pant</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>800</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -314,7 +315,7 @@
             <div class="content">
               <h4> Kurta pyjama</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>500</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
           <div class="card-1">
@@ -324,7 +325,7 @@
             <div class="content">
               <h4>  Comouflage T-shirt and pant</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>500</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
           <div class="card-1">
@@ -334,7 +335,7 @@
             <div class="content">
               <h4> Shirts and pyjama set</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>450</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
           <div class="card-1">
@@ -344,7 +345,7 @@
             <div class="content">
               <h4>Festivel &party formal coat pant</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>699</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                  <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -355,7 +356,7 @@
             <div class="content">
               <h4>  Printed round neck full sleeve T-shirt</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>400</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                   <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
 
@@ -366,7 +367,7 @@
             <div class="content">
               <h4>  Hoodie T-shirt Jogger</h4>
                <h3><i class="fa-solid fa-indian-rupee-sign"></i>560</h3>
-                   <button><a href="Server Not fond">Buy Now</a></button>
+                  <button onclick="location.href='payment.html'">Payment</button>
             </div>
         </div>
     </div>
